crates/ui/src/snapshots/cctop_ui__snapshot__connect_access_links_off_80x24.snap
---
source: crates/ui/src/snapshot.rs
expression: screen
---
 1:Dashboard │ + Tab (t) ───────────────────────────────────────────── Settings
╭ Overview ────────────────────────────────────────────────────────────────────╮
│Live rate         $0.04                               ⡀  Models               │
│Today             $8.97                               ⡀  Sessions  4 · 2 live │
│This month        $0.00                               ⡀  Agent CPU   3.2%     │
│All time         $28.51 $0.00/day this month             Agent mem 592 MB     │
╰────╭ Who may log in ────────────────────────────────────────────────────╮────╯
╭ Ses│ Access  on — owner@example.com owns it                             │────╮
│   L│ Links   off — from outside, only a login gets in                   │    │
│●   │                                                                    │ ch…┃
│●   │   @example.com      read-only                                      │    │
╰────│   boss@example.org  full                                           │────╯
╭ Inf│                                                                    │text╮
│Root│ Invite an email, or everyone at @company.com:                      │    │
│    │ > guest@█                                                          │    │
│   4│   read-only; f on it afterwards makes it full                      │    │
│   4│                                                                    │    │
│   4│ [Enter] invite  [Esc] cancel                                       │    │
│    ╰────────────────────────────────────────────────────────────────────╯    │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Limits ─────────────────────────────────────────────────────────── + account ╮
│Claude checking…                        Codex checking…                       │
╰──────────────────────────────────────────────────────────────────────────────╯
↑↓ Move ↵ Actions / Filter Space Mark a Attach R Resume ? Help          ⧉ share
