crates/ui/src/snapshots/cctop_ui__snapshot__connect_access_login_token_80x24.snap
---
source: crates/ui/src/snapshot.rs
expression: screen
---
 1:Dashboard │ + Tab (t) ───────────────────────────────────────────── Settings
╭ Overview ────────────────────────────────────────────────────────────────────╮
│Live rate         $0.04                               ⡀  Models               │
│Today             $8.97                               ⡀  Sessions  4 · 2 live │
│This month        $0.00                               ⡀  Agent CPU   3.2%     │
│All ╭ Who may log in ────────────────────────────────────────────────────╮    │
╰────│ Cloudflare Access: off. The page opens with its                    │────╯
╭ Ses│ token link, and anyone holding it is in.                           │────╮
│   L│ On, it asks for a login: a code emailed to you or                  │    │
│●   │ whoever you invite. Nobody needs a Cloudflare account.             │ ch…┃
│●   │                                                                    │    │
╰────│ A browser login cannot manage Access; an API                       │────╯
╭ Inf│ token can, and keeps this tunnel as it is:                         │text╮
│Root│    dash.cloudflare.com/profile/api-tokens                          │    │
│    │ Paste it here:                                                     │    │
│   4│ > •••••••█  7 characters                                           │    │
│   4│                                                                    │    │
│   4│ [Enter] use it  [Ctrl+O] copy link  [Esc] cancel                   │    │
│    ╰────────────────────────────────────────────────────────────────────╯    │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Limits ─────────────────────────────────────────────────────────── + account ╮
│Claude checking…                        Codex checking…                       │
╰──────────────────────────────────────────────────────────────────────────────╯
↑↓ Move ↵ Actions / Filter Space Mark a Attach R Resume ? Help          ⧉ share
