crates/ui/src/snapshots/cctop_ui__snapshot__connect_access_on_80x24.snap
---
source: crates/ui/src/snapshot.rs
expression: screen
---
 1:Dashboard │ + Tab (t) ───────────────────────────────────────────── Settings
╭ Overview ────────────────────────────────────────────────────────────────────╮
│Live rate         $0.04                               ⡀  Models               │
│Today             $8.97                               ⡀  Sessions  4 · 2 live │
│This month        $0.00                               ⡀  Agent CPU   3.2%     │
│All time         $28.51 $0.00/day this month             Agent mem 592 MB     │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Ses╭ Who may log in ────────────────────────────────────────────────────╮────╮
│   L│ Access  on — owner@example.com owns it                             │    │
│●   │ Links   https://cctop-link.example.com                             │ ch…┃
│●   │         token links, for people who cannot log in                  │    │
╰────│                                                                    │────╯
╭ Inf│   @example.com      read-only                                      │text╮
│Root│ › boss@example.org  full                                           │    │
│    │ Invited boss@example.org, with full access.                        │    │
│   4│                                                                    │    │
│   4│ [i] invite [x] remove [f] full/read [l] links [o] off [Esc]        │    │
│   4╰────────────────────────────────────────────────────────────────────╯    │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Limits ─────────────────────────────────────────────────────────── + account ╮
│Claude checking…                        Codex checking…                       │
╰──────────────────────────────────────────────────────────────────────────────╯
↑↓ Move ↵ Actions / Filter Space Mark a Attach R Resume ? Help          ⧉ share
