crates/ui/src/snapshots/cctop_ui__snapshot__connect_connected_access_80x24.snap
---
source: crates/ui/src/snapshot.rs
expression: screen
---
 1:Dashboard │ + Tab (t) ───────────────────────────────────────────── Settings
╭ Overview ────────────────────────────────────────────────────────────────────╮
│Live rate         $0.04                               ⡀  Models               │
│Today             $8.97                               ⡀  Sessions  4 · 2 live │
│This month        $0.00                               ⡀  Agent CPU   3.2%     │
│All time         $28.51 $0.00/day this month             Agent mem 592 MB     │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Sessions (4) ────────────────────────────────────────────────────────────────╮
│   LAST▲         $ MODEL          PERM   ! HOST       BRANCH       PROJECT    │
│●   ╭ Your Cloudflare account ───────────────────────────────────────────╮ ch…┃
│●   │ Page    https://cctop.example.com                                  │    │
╰────│ Shares  https://cctop-share.example.com                            │────╯
╭ Inf│ Access  on — owner@example.com logs in                             │text╮
│Root│                                                                    │    │
│    │ [a] who may log in  [d] disconnect  [Esc] close                    │    │
│   4╰────────────────────────────────────────────────────────────────────╯    │
│   4188    2.4%     44.0M  node mcp-server.js                                 │
│   4290    0.3%      8.0M  bash -c npm test                                   │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Limits ─────────────────────────────────────────────────────────── + account ╮
│Claude checking…                        Codex checking…                       │
╰──────────────────────────────────────────────────────────────────────────────╯
↑↓ Move ↵ Actions / Filter Space Mark a Attach R Resume ? Help          ⧉ share
